# django-mail-panel

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.md  FUNDING.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_tests.sh  setup.py  test_build.sh  tox.ini
debug_toolbar_mail/: backend.py  conf.py  panels.py  urls.py  utils.py  views.py
debug_toolbar_mail/templates/django_mail_toolbar/: message_overview.html  panel.html  plain_text_message.html
mail_panel/: __init__.py  backend.py  panels.py  urls.py  utils.py  views.py
mail_panel/static/debug_toolbar/mail/: mail_toolbar.css  toolbar.mail.js
mail_panel/templates/mail_panel/: message_overview.html  panel.html  raw_message.html
src/django_toolbar_mail/: backend.py  panels.py  views.py
src/django_toolbar_mail/static/debug_toolbar/mail/: mail_toolbar.css
src/mail_panel/: backend.py  panels.py  urls.py  utils.py  views.py
src/mail_panel/static/debug_toolbar/mail/: mail_toolbar.css  toolbar.mail.js
src/mail_panel/templates/mail_panel/: panel.html
tests/: __main__.py  conf.py  context.py  settings.py  test_toolbar.py
